# edaflow-lite

./: .gitignore  README.md  app.py  edaflow.py  pyproject.toml
.github/workflows/: ci.yml
edaflow_lite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ml/: violation_classifier.ipynb
parser/: timing_parser.py  violation_summary.py
parser/adapters/: base.py  mock_sta.py
reports/: timing_report.txt
tests/: test_edaflow_filters.py  test_timing_parser.py  test_violation_summary.py
visualize/: slack_distribution.py
