[project]
name = "edaflow-lite"
version = "0.1.0"
description = "Lightweight mock EDA signoff flow: parse timing report, summarize violations, visualize slack distribution, baseline ML scaffold."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-tabulate",
  "streamlit>=1.36",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.setuptools]
# 這行是關鍵：明確指定要打包的 package
packages = ["parser", "visualize"]